mobile carousel and spacing issues

--- a/src/pages/common/full-screen-carousel/full-screen-carousel.scss
+++ b/src/pages/common/full-screen-carousel/full-screen-carousel.scss
@@ -10,4 +10,16 @@
   background: black;
 }
 
+
+.full-screen-carousel {
+  width: 50%;
+  height: 80%;
+}
+
+@media (max-width: 600px) {
+  .full-screen-carousel {
+    width: 100%;
+    height: 80%;
+  }
+}
 // TODO add inline styles from full screen carousel here, add breakpoints for mobile viewing
