--- a/src/pages/vacations/vacations.css
+++ b/src/pages/vacations/vacations.css
@@ -19,6 +19,7 @@
 }
 
 .vacation-swiper-slide-card {
+    cursor: pointer;
     position: relative;
     margin: 60px 20px;
 }
